<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_client_id" translatable="false">178434782271-rt2kpfb3okv7m0ne16mg3cr2i8ml64rc.apps.googleusercontent.com</string>

</resources>
